[package]
name = "garden"
version = "0.1.0"
authors = ["Todd Young <yngtdd@gmail.com>"]
edition = "2021"

[[bin]]
name = "garden"
path = "src/main.rs"

[lib]
name = "garden"
path = "src/lib.rs"

[dependencies]
color-eyre = "0.6.1"
directories = "4.0.1"
directory = "0.0.0"
edit = "0.1.4"
structopt = "0.3.26"

[dev-dependencies]
assert_cmd = "2.0.4"
